--- a/styles.css
+++ b/styles.css
@@ -55,10 +55,19 @@ p {
 	padding-left: 5px;
 }
 
+div h4 {
+	margin: 6px auto;
+}
+
 .nav-li {
 	display: inline;
 	padding: 5px;
 	color: #D8c99b;
+}
+
+.right-align {
+	float: right;
+	margin-right: 5px;
 }
 
 #outbound {
@@ -72,9 +81,18 @@ p {
 	margin: auto;
 	padding-bottom: 10px;
 }
+.employer {
+	border: 3px solid #BD632f;
+	background-color: #D8c99b;
+	width: 75%;
+	margin: auto;
+	padding: 5px;
+	margin-bottom: 12px;
+}
 
 .blog-post {
 	border: 3px solid #BD632f;
+	background-color: #D8c99b;
 	width: 75%;
 	margin: auto;
 	padding: 5px;
@@ -86,13 +104,16 @@ p {
 	padding: 5px;
 }
 
-.blog-post h4 {
-	margin: 3px auto;
-}
-
 .blog-post a {
 	display: inline;
+	color: #b7245c;
 }
+
+.blog-post a:hover{
+	color: #BD632f;
+	transition: color .3s ease-in-out;
+}
+
 
 #blog a {
 	text-align: center;
@@ -134,6 +155,11 @@ p {
 	-moz-box-sizing:border-box;
     -webkit-box-sizing:border-box;
     box-sizing:border-box;
+}
+
+input::placeholder, textarea::placeholder {
+	color: #f3eee1;
+	font-family: "Oswald", sans-serif;
 }
 
 button {
