--- a/styles.css
+++ b/styles.css
@@ -234,22 +234,37 @@ footer div {
 	display: flex;
 	flex-direction: column;
 	width: 85%;
-	margin: 10% auto;
-	border: 2px solid white;
-	border-radius: 3px;
+	margin: 5% auto;
+	border: 2px dotted white;
+	border-radius: 10px;
 }
 
 #blog-input input{
 	height: 30px;
 }
 
+#blog-input label:nth-of-type(1){
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+#blog-input input[type="submit"] {
+	background-color: #b7245c;
+	height: 40px;
+	border: none;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+	font-weight: bold;
+}
+
 #blog-input label {
 	color: white;
 	height: 30px;
-	background-color: #BD632f;
+	background-color: #d8c99b;
 	padding-top: 8px;
 }
 
 #blog-input textarea{
 	height: 500px;
 }
+
